--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -12,6 +12,8 @@
   left: 0;
   padding: 0 10px;
   gap: 16px;
+  justify-content: center;
+  align-items: center;
 }
 
 .modal_is-opened {
@@ -57,6 +59,22 @@
 }
 
 .modal__close-button:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+
+.modal__close-button_image {
+  background: none;
+  border: 0px;
+  cursor: pointer;
+  opacity: 0.4;
+  position: absolute;
+  top: 0;
+  right: -40px;
+  padding: 0;
+}
+
+.modal__close-button_image:hover {
   opacity: 1;
   cursor: pointer;
 }
@@ -129,22 +147,6 @@
   position: relative;
 }
 
-.modal__close-button_image {
-  background: none;
-  border: 0px;
-  cursor: pointer;
-  opacity: 0.4;
-  position: absolute;
-  top: 100px;
-  right: -40px;
-  padding: 0;
-}
-
-.modal__close-button_image:hover {
-  opacity: 1;
-  cursor: pointer;
-}
-
 .modal__image {
   max-width: 80vw;
   max-height: 80vh;
@@ -178,5 +180,13 @@
   .modal__submit-button {
     align-self: center;
     min-width: 100%;
+  }
+
+  .modal__title {
+    font-size: 20px;
+  }
+
+  .modal__caption {
+    font-size: 16px;
   }
 }
